@@ -6,3 +6,9 @@ __pycache__
 *.pyc
 *~
 .*.swp
+*.egg/
+*.pyc
+AUTHORS
+ChangeLog
+.tox
+doc/build/
