@@ -48,9 +48,9 @@ copyright = u'2012, Testrepository Contributors'
 # built documents.
 #
 # The short X.Y version.
-version = 'trunk'
+# version = 'trunk'
 # The full version, including alpha/beta/rc tags.
-release = 'trunk'
+# release = 'trunk'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
@@ -91,7 +91,7 @@ pygments_style = 'sphinx'
 
 # The theme to use for HTML and HTML Help pages.  See the documentation for
 # a list of builtin themes.
-html_theme = 'default'
+html_theme = 'nature'
 
 # Theme options are theme-specific and customize the look and feel of a theme
 # further.  For a list of options available for each theme, see the
