@@ -22,15 +22,9 @@ The repository package contains the core storage code.
 The tests package contains tests and test specific support code.
 """
 
-# same format as sys.version_info: "A tuple containing the five components of
-# the version number: major, minor, micro, releaselevel, and serial. All
-# values except releaselevel are integers; the release level is 'alpha',
-# 'beta', 'candidate', or 'final'. The version_info value corresponding to the
-# Python version 2.0 is (2, 0, 0, 'final', 0)."  Additionally we use a
-# releaselevel of 'dev' for unreleased under-development code.
-#
-# If the releaselevel is 'alpha' then the major/minor/micro components are not
-# established at this point, and setup.py will use a version of next-$(revno).
-# If the releaselevel is 'final', then the tarball will be major.minor.micro.
-# Otherwise it is major.minor.micro~$(revno).
-__version__ = (0, 0, 20, 'final', 0)
+# Yes, this is not PEP-396 compliant. It predates that.
+from pbr.version import VersionInfo
+
+_v = VersionInfo('mock').semantic_version()
+version = _v.release_string()
+__version__ = _v.version_tuple()
