@@ -41,12 +41,12 @@ class TestCanSetup(TestCase):
             DocTestMatches("""...
 running install_scripts
 ...
-adding '...testr'
+Installing testr script...
 ...""", doctest.ELLIPSIS),
             # unixen
             DocTestMatches("""...
-...bin/testr ...
-""", doctest.ELLIPSIS)
+Installing testr script to build/.../bin
+...""", doctest.ELLIPSIS)
             ))
         self.assertEqual(0, proc.returncode,
             "Setup failed out=%r err=%r" % (output, err))
